@@ -124,6 +124,7 @@
 				<include name="confing.ini" />
 				<include name="CHANGELOG" />
 				<include name="README" />
+				<include name="lang/*.XML" />
 			</fileset>
 			<zipfileset excludes="META-INF/*.SF" src="lib/hibernate/hibernate-annotations.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/hibernate/hibernate3.jar" />
@@ -141,6 +142,8 @@
 			<zipfileset excludes="META-INF/*.SF" src="lib/jdom/jdom.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/log4j/log4j-1.2.15.jar" />
 			<zipfileset excludes="META-INF/*.SF" src="lib/rome/rome-1.0.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/jcalendar/lib/jcalendar-1.3.3.jar" />
+			<zipfileset excludes="META-INF/*.SF" src="lib/jcalendar/lib/looks-2.0.1.jar" />
 		</jar>
 	</target>
 </project>
