@@ -2,5 +2,7 @@
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd"> 
 <properties>
 <comment>TrayRSS Language Configuration</comment> 
-<entry key="trayrss.lang">en</entry>
+<entry key="trayrss.lang">de</entry>
+<entry key="trayrss.displaysecond">10</entry>
+<entry key="trayrss.displaycount">5</entry>
 </properties>
